Move over last of it.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,12 +10,14 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(gtest)
 
 set(SRC_LIST
+    "collections_tests.cpp"
     "functional_tests.cpp"
     "math_tests.cpp"
     "types_tests.cpp")
 
 add_executable(magnesium_test ${SRC_LIST})
 target_link_libraries(magnesium_test PRIVATE magnesium)
+target_link_libraries(magnesium_test PRIVATE GTest::gmock)
 target_link_libraries(magnesium_test PRIVATE GTest::gtest_main)
 
 enable_testing()
