Fing crazy that it builds.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,8 @@ set(SRC_LIST
     "collections_tests.cpp"
     "functional_tests.cpp"
     "math_tests.cpp"
-    "types_tests.cpp")
+    "types_tests.cpp"
+    "sequence_tests.cpp")
 
 add_executable(magnesium_test ${SRC_LIST})
 target_link_libraries(magnesium_test PRIVATE magnesium)
