A lot of fixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,12 @@ project(magnesium VERSION 0.1.0
                   LANGUAGES CXX)
 
 set(HEADER_LIST
+    "include/mg/collections.hpp"
     "include/mg/functional.hpp"
+    "include/mg/math.hpp"
+    "include/mg/sequence.hpp"
     "include/mg/types.hpp"
-    "include/mg/detail/is_instance.hpp"
-    "include/mg/detail/iter_n.hpp")
+    "include/mg/utility.hpp")
 add_library(magnesium INTERFACE ${HEADER_LIST})
 target_include_directories(magnesium INTERFACE "include")
 
